[package]
name = "parsnip"
version = "0.1.0"
authors = ["TeamTeamWork <8036404+MichaelLeith@users.noreply.github.com>"]
edition = "2018"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# @todo: support ascii only
unicode-segmentation = "1.7.1"
hashbrown = {version = "0.9.1", default-features = false, optional = true}
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true}
log = {version = "0.4.14", optional = true}

[dev-dependencies]
pretty_assertions = "0.6.1"
simple_logger = "1.11.0"
criterion = { version = "0.3.4", features = ["html_reports"] }
pprof = { version = "0.4.3", features = ["flamegraph", "criterion"] }

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["std"]
std = []
no-std = ["hashbrown"]
derive = ["serde"]
debug = ["log"]

[workspace]
members = [
    ".",
    "no-std-test",
    "derive-test"
]
default-members = [
    ".",
    "no-std-test",
    "derive-test"
]

# Benchmarks

[[bench]]
name = "default"
harness = false

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "complex"
harness = false
