[package]
name = "derive-test"
version = "0.1.0"
authors = ["TeamTeamWork <8036404+MichaelLeith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparsnip = { path = "..", features = ["derive"] }
serde_json = "1"
