[package]
name = "no-std-test"
version = "0.1.0"
authors = ["TeamTeamWork <8036404+MichaelLeith@users.noreply.github.com>"]
edition = "2018"
description = "simple test module to check no-std support for parsnip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparsnip = { path = "..", features = ["no-std"] }
